Add Service, Controller and Repository of Address, Course and AcademicBlock

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-
 #Generic
 error.name.blank=Name is mandatory
 error.email.invalid=Invalid email address
@@ -8,12 +7,18 @@ error.username.taken=Username is already taken
 error.password.blank=Password is mandatory
 error.password.weak=Password must be at least 5 characters long
 error.user.notFound=User not found
-
+error.generic.message=Something is wrong
 
 #Faculty
 error.title.blank=Title is mandatory
 
 #Student
 error.studentId.blank=Student Id is mandatory
+
+#Course
+error.course.created=Course is already created
+
+#CourseOffering
+error.courseOfferingId.noRecord=There is no Record for this id
 
 
