--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ error.password.blank=Password is mandatory
 error.password.weak=Password must be at least 5 characters long
 error.user.notFound=User not found
 error.generic.message=Something is wrong
+error.event.notFound=Registration event not found
 
 #Faculty
 error.title.blank=Title is mandatory
