--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,4 +22,6 @@ error.course.created=Course is already created
 #CourseOffering
 error.courseOfferingId.noRecord=There is no Record for this id
 
-
+# Registration event
+error.event.open=Registration event is still open. Can't initiate before registration period is over
+error.event.processed=Event is already processed;
