--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,4 +21,7 @@ error.course.created=Course is already created
 #CourseOffering
 error.courseOfferingId.noRecord=There is no Record for this id
 
+#Registration Request
+error.registration.close = Trying to submit Close Registration Event
+
 
